# OCR_deployment

./: CMakeLists.txt  README.md
Paddle_OCR_deployment/: Dockerfile
Paddle_OCR_deployment/include/: OCRProcessor.hpp  PaddleOCRWrapper.hpp
Paddle_OCR_deployment/src/: PaddleOCRWrapper.cpp  Utils.cpp
include/: Utils.hpp
onnx_runtime_yolo/: ORTModel.cpp  ORTModel.hpp  ORTRunner.cpp  ORTRunner.hpp  ORTYolov5.cpp  ORTYolov5.hpp  Types.hpp  scrfd.py
src/: OCRProcessor.cpp  main.cpp
